--- a/react.js/eth-msg-brd-web/package.json
+++ b/react.js/eth-msg-brd-web/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.4",
     "date-fns": "^2.28.0",
     "ethers": "^5.6.6",
+    "firebase": "^9.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -28,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn build && firebase deploy"
   },
   "eslintConfig": {
     "extends": [
